--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,21 @@ services:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - app-network
+  
+  redis:
+    image: redis:latest
+    restart: always
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    networks:
+      - app-network
+
 
 volumes:
   postgres_data:
+  redis_data:
 
 networks:
   app-network:
