--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,17 +12,28 @@ services:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - app-network
-  
+
   redis:
     image: redis:latest
     restart: always
     ports:
-      - "6379:6379"
+      - '6379:6379'
     volumes:
       - redis_data:/data
     networks:
       - app-network
 
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.18.0
+    environment:
+      - discovery.type=single-node
+      - 'ES_JAVA_OPTS=-Xms1g -Xmx1g'
+      - 'xpack.security.enabled=false'
+      - 'xpack.security.http.ssl.enabled=false'
+    ports:
+      - '9200:9200'
+    networks:
+      - app-network
 
 volumes:
   postgres_data:
